--- a/index.html
+++ b/index.html
@@ -11,6 +11,21 @@
       <h1> Mini Bio</h1>
       <p>Hello my name is Josh an I am currently a student at Codex Academy. I went to school at Vol State Community College for two years. My Major was Computer Information Technology: Networking. I've worked mainly in retail for a good part of my life so far. I was Head of a stockroom at marshalls for a good two years. I'm currently a material receiver at Gaylord Opryland Resort. My two goals this year are, to pass this course to secure a job, and start my own business.</p>
 
+      <h2>Top Ten NBA players</h2>
+      <ol>
+        <li>Michael Jordan</li>
+        <li>Lebron James</li>
+        <li>Kareem Abdul-Jabbar</li>
+        <li>Bill Russel</li>
+        <li>Magic Johnson</li>
+        <li>Wilt Chamberlain</li>
+        <li>Larry Bird</li>
+        <li>Tim Duncan</li>
+        <li>Kobe Bryant</li>
+        <li>Shaquille O'Neal</li>
+      </ol>
+
+
 
   </main>
 <script src="js/app.js"></script>
