--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About Me</title>
    <link rel="stylesheet" 
-   href="style.css">
+   href="css/style.css">
 </head>
 
 <body>
